--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "domain-events",
   "version": "0.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A js library to create and asyncronously dispatch Domain Events",
+  "main": "src",
   "scripts": {
     "test": "./node_modules/.bin/jest --watchAll ./src"
   },
