--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "domain-events",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A js library to create and asyncronously dispatch Domain Events",
   "main": "src",
   "scripts": {
@@ -11,6 +11,5 @@
   "devDependencies": {
     "jest": "^19.0.2"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
