--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A js library to create and asyncronously dispatch Domain Events",
   "main": "src",
   "scripts": {
-    "test": "./node_modules/.bin/jest --watchAll ./src"
+    "test": "./node_modules/.bin/jest --watchAll ./src",
+    "test-travis": "./node_modules/.bin/jest ./src"
   },
   "author": "Daniele Mariani",
   "license": "ISC",
