--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ install:
 
 script:
     - npm run test-travis
+
+# Send coverage data to Coveralls
+after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
