--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "src",
   "scripts": {
     "test": "./node_modules/.bin/jest --watchAll ./src",
-    "test-travis": "./node_modules/.bin/jest --coverage ./src"
+    "test-travis": "./node_modules/.bin/jest ./src --coverage"
   },
   "author": "Daniele Mariani",
   "license": "ISC",
   "devDependencies": {
+    "coveralls": "^2.13.1",
     "jest": "^19.0.2"
   },
   "dependencies": {}
