--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ install:
 script:
     - npm run test-travis
 
-# Send coverage data to Coveralls
-after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
+after_script:
+    - "cat coverage/lcov.info | coveralls"
