--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/expressjs/cookie-session.git"
+    "url": "https://github.com/danielemariani/domain-events"
   },
   "devDependencies": {
     "coveralls": "^2.13.1",
